examples/test/testpolicy12286.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12286
  namespace: namespace23
spec:
  podSelector:
    matchLabels:
      key37: value19
      key28: value13
      key33: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value27
          key46: value24
          key33: value31
      podSelector:
        matchLabels:
          key0: value46
          key37: value36
